--- a/css/common.css
+++ b/css/common.css
@@ -29,6 +29,18 @@ button {
   text-align: center;
 
   gap: 10px;
+  padding: 0;
 
   list-style: none;
+}
+
+.item {
+  width: calc((100vw - 20px) / 3);
+}
+
+.img {
+  width: 100%;
+  height: 150px;
+
+  object-fit: cover;
 }
